log/build_2025-02-25_13-55-03/hospital_hardware/stderr.log
  File "/home/vikash/Hospital_ws/install/hospital_hardware/lib/python3.10/site-packages/hospital_hardware/encoder.py", line 80
    pwm_value = int((abs(linear_x) + abs(angular_z)) * 9
                   ^
SyntaxError: '(' was never closed

